[package]
name = "server"
version = "0.1.0"
authors = ["Ben Burdette <bburdette@gmail.com>"]

[dependencies]
env_logger = "0.5.13"
log = "0.4.0"
actix = "0.7.5"
actix-web = "0.7.13"
futures = "0.1.25"
serde = "1.0.27"
serde_derive = "1.0.27"
serde_json = "1.0.9"
failure = "0.1.1"
uuid = { version = "0.6", features = ["v4"] }
time = "0.1"
rand = "0.5.0"
toml = "0.4.8"
